--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
 	background-color: #C3F7FA;
+	font-family: Verdana;
 }
 
 h1 {
-	font-family: Verdana;
 	font-size: 40px;
 	color: #193380;
 	border: 3px solid black;
@@ -13,56 +13,52 @@ h1 {
 	text-align: center;
 }
 
-p {
-	font-family: Verdana;
-}
-
-#stirfry {
-	width: 300px;
+#burger {
 	float: left;
-	opacity: 0.5;
+	margin-right: 15px;
 }
 
-#stirfry:hover {
-	opacity: 1.0;
+.quote {
+	padding: 15px;
 }
 
-#rice {
-	width: 300px;
-	float: left;
-	opacity: 0.5;
-
-}
-#rice:hover {
-	opacity: 1.0;
+table {
+	border: 1px solid black;
+	box-shadow: 5px 5px 5px #888888;
+	background-color: white;
+	padding: 10px;
 }
 
 .ingredients {
 	clear: both;
-	font-family: Verdana;
 	background-color: #A7BAF2;
 	padding: 10px;
 	border-top: 5px solid black;
 }
 
 .instructions {
-	font-family: Verdana;
 	background-color: #A7BAF2;
 	padding: 10px;
 	border-bottom: 5px solid black;
 }
 
-#whale {
-	width: 600px;
-	float: left;
-	margin-top: 10px;
+ol {
+	background-color: white;
+	border: 1px solid black;
+	box-shadow: 5px 5px 5px #888888;
+	padding: 10px 10px 10px 40px;
 }
 
-#link {
-	clear: both;
-	padding-bottom: 50px;
+#whale, #donut, #cheese {
+	float: left;
+	margin: 10px;
+	padding: 0;
+	border: 2px solid navy;
+	border-radius: 12px;
 }
 
 img {
+	height: 260px;
 	border-radius: 10px;
 }
+
